--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Levi's Portfolio</title>
+    <title>Levi Mason</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -32,7 +32,7 @@
         }
         .profile-card {
             max-width: 800px;
-            margin: 20px auto; /* Add margin to center the card and create spacing from the screen edges */
+            margin: 20px auto;
             background-color: #fff;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             border-radius: 15px;
@@ -71,15 +71,32 @@
             object-fit: cover;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
+        .contact h2 {
+            margin: 0;
+        }
+        .contact-button {
+            background: linear-gradient(to right, #FF0000, #000000);
+            color: #fff;
+            border: none;
+            border-radius: 15px;
+            padding: 15px;
+            text-align: center;
+            font-weight: 600;
+            cursor: pointer;
+        }
+        .contact-button a {
+            text-decoration: none;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Levi's Portfolio</h1>
-        <p>Web Developer</p>
+        <h1>Levi Mason</h1>
+        <p>Criminal Justice | Law Enforcement | Emergency Managment</p>
     </header>
     <div class="profile-card">
-        <img src="profile-photo.jpg" alt="Your Photo" class="profile-photo">
+        <img src="profile-photo.jpg" alt="Profile photo" class="profile-photo">
         <h2>About Me</h2>
         <p>Write a brief introduction about yourself here.</p>
     </div>
@@ -103,10 +120,12 @@
             <div class="contact">
                 <h2>Contact</h2>
                 <ul>
-                    <li>Email: your.email@example.com</li>
-                    <li>LinkedIn: <a href="https://www.linkedin.com/yourprofile">linkedin.com/yourprofile</a></li>
-                    <li>Portfolio: <a href="https://www.yourportfolio.com">yourportfolio.com</a></li>
+                    <li>Email: levi@levim.org</li>
+                    <li>Phone: 864.361.4734</li>
                 </ul>
+                <div class="contact-button">
+                    <a href="tel:8643614734">Contact Me</a>
+                </div>
             </div>
         </div>
     </div>
