--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <p>Criminal Justice | Law Enforcement | Emergency Managment</p>
     </header>
     <div class="profile-card">
-        <img src="profile-photo.jpg" alt="Profile photo" class="profile-photo">
+        <img src="View recent photos 2.png" alt="Profile photo" class="profile-photo">
         <h2>About Me</h2>
         <p>Write a brief introduction about yourself here.</p>
     </div>
