--- a/index.html
+++ b/index.html
@@ -39,14 +39,9 @@
             padding: 20px;
         }
         .experience,
-        .certificates {
-            background-color: #fff;
-            border-radius: 15px;
-            padding: 20px;
-            margin-bottom: 20px;
-        }
         .skills,
-        .contact {
+        .contact,
+        .certificates {
             background-color: #fff;
             border-radius: 15px;
             padding: 20px;
@@ -93,8 +88,8 @@
 </head>
 <body>
     <header>
-        <h1>Levi's Portfolio</h1>
-        <p>Web Developer</p>
+        <h1>Levi Mason</h1>
+        <p>Criminal Justice | Law Enforcement | Emergency Management</p>
     </header>
     <div class="profile-card">
         <img src="View recent photos 2.png" alt="View recent photos 2.png" class="profile-photo">
@@ -104,16 +99,19 @@
     <div class="profile-card certificates">
         <h2>Certificates</h2>
         <ul>
-            <li><strong>Web Development Certification</strong> - Online Academy (2021)</li>
-            <li><strong>Front-End Development Certificate</strong> - Coding School (2020)</li>
+            <li><strong>FEMA IS-100C</strong> - Introduction to Incident Command System, ICS-100 (2022)</li>
+            <li><strong>FEMA IS-700B</strong> - An Introduction to the National Incident Management System ICS-700 (2022)</li>
+            <li><strong>FEMA IS-200C</strong> - Basic Incident Command System for Initial Response (2023)</li>
+            <li><strong>FEMA IS-201</strong> - Forms Used For the Development of the Incident Action Plan (2023)</li>
         </ul>
     </div>
     <div class="profile-card skills">
         <h2>Skills</h2>
         <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
+            <li>Adult CPR</li>
+            <li>First Aid</li>
+            <li>AED Trained</li>
+            <li>BLS (Basic Life Support) Certified</li>
         </ul>
     </div>
     <div class="profile-card contact">
