--- a/index.html
+++ b/index.html
@@ -94,7 +94,15 @@
     <div class="profile-card">
         <img src="View recent photos 2.png" alt="View recent photos 2.png" class="profile-photo">
         <h2>About Me</h2>
-        <p>Write a brief introduction about yourself here.</p>
+        <p>With a strong passion for emergency management, healthcare, and public safety, I bring expertise in disaster preparedness and response. I hold certificates from the Emergency Management Institute in Incident Command System (ICS) and Incident Management System (IMS) courses, showcasing my ability to manage complex incidents effectively.
+
+        I also possess crucial medical certifications for Basic Life Support (BLS) care, emphasizing my ability to provide critical medical care under pressure.
+
+        My education at the Pickens County Career and Technology Center, focusing on law, public safety, and law enforcement, refined my understanding of security procedures, emergency response, and instilled discipline and leadership skills.
+
+        My versatile background equips me to excel in dynamic environments requiring effective response coordination and critical incident management. I aspire to contribute to organizations valuing emergency management, healthcare, and public safety principles, ensuring the safety and well-being of individuals and communities.
+
+        In summary, my comprehensive training in emergency management, medical care, and public safety, coupled with my dedication to ongoing professional development, positions me as a strong candidate for roles demanding expertise in these essential areas. I am eager to connect with like-minded professionals and organizations committed to enhancing community safety and well-being.</p>
     </div>
     <div class="profile-card certificates">
         <h2>Certificates</h2>
