--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p>Criminal Justice | Law Enforcement | Emergency Management</p>
     </header>
     <div class="profile-card">
-        <img src="View recent photos 2.png" alt="View recent photos 2.png" class="profile-photo">
+        <img src="IMG_0262.JPG" alt="IMG_0262.JPG" class="profile-photo">
         <h2>About Me</h2>
         <p>With a strong passion for emergency management, healthcare, and public safety, I bring expertise in disaster preparedness and response. I hold certificates from the Emergency Management Institute in Incident Command System (ICS) and Incident Management System (IMS) courses, showcasing my ability to manage complex incidents effectively.
 
