--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
     <div class="profile-card">
         <img src="IMG_0262.JPG" alt="IMG_0262.JPG" class="profile-photo">
         <h2>About Me</h2>
-        <p>With a strong passion for emergency management, healthcare, and public safety, I bring expertise in disaster preparedness and response. I hold certificates from the Emergency Management Institute in Incident Command System (ICS) and Incident Management System (IMS) courses, showcasing my ability to manage complex incidents effectively.
+        <p>Aspiring Law Enforcement Professional | EHS '24 | Tri-County Tech College '24
 
-        I also possess crucial medical certifications for Basic Life Support (BLS) care, emphasizing my ability to provide critical medical care under pressure.
+Hello! I'm Levi Mason, a high school senior graduating in 2024. I'm passionate about a career in law enforcement and will be majoring in Criminal Justice at Tri-County Technical College this fall.
 
-        My education at the Pickens County Career and Technology Center, focusing on law, public safety, and law enforcement, refined my understanding of security procedures, emergency response, and instilled discipline and leadership skills.
+I hold certificates in FEMA IS-700B, IS-100C, IS-200C, and IS-201, showcasing my commitment to emergency management. Excited to blend theory with practical experience, I aim to contribute to community safety.
 
-        My versatile background equips me to excel in dynamic environments requiring effective response coordination and critical incident management. I aspire to contribute to organizations valuing emergency management, healthcare, and public safety principles, ensuring the safety and well-being of individuals and communities.
+Eager to connect with like-minded individuals in law enforcement, public safety, or criminal justice. Let's explore opportunities together!
 
-        In summary, my comprehensive training in emergency management, medical care, and public safety, coupled with my dedication to ongoing professional development, positions me as a strong candidate for roles demanding expertise in these essential areas. I am eager to connect with like-minded professionals and organizations committed to enhancing community safety and well-being.</p>
+Easley High School | Tri-County Tech College | Future Law Enforcement Professional</p>
     </div>
     <div class="profile-card certificates">
         <h2>Certificates</h2>
